log
Mon 20 Mar 2023 09:52:14 PM UTC: 
 tests:  0|6
total_score: 0/70
8bf0802
Tue 21 Mar 2023 07:19:48 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
Compilation failed
e451833
Tue 21 Mar 2023 07:20:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head=NULL;
      |       ^~
list.c:32:22: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list=(List*) malloc(sizeof(list));
      |                      ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail=NULL;
      |       ^~
list.c:32:22: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list=(List*) malloc(sizeof(list));
      |                      ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current=NULL;
      |       ^~
list.c:32:22: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list=(List*) malloc(sizeof(list));
      |                      ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
04a107b
Tue 21 Mar 2023 07:21:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f8be012
Tue 21 Mar 2023 07:21:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |     list->head=NULL;
      |         ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List* list=(List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |     list->tail=NULL;
      |         ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List* list=(List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |     list->current=NULL;
      |         ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List* list=(List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
100c969
Tue 21 Mar 2023 07:23:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c9d8cb6
